<resources>
    <string name="app_name">HunPercent</string>

    <string name="umeng_appkey_debug">5ca0b23661f5644646000d08</string>
    <string name="umeng_appkey_release">5ca0b75a2036573e06000225</string>

    <string name="first_plan_title">Todo</string>
    <string name="first_plan_description">First TodoList</string>

    <string name="title_plan">计划清单</string>
    <string name="title_daily_records">今日事项</string>

    <string name="today_records_empty">今天没有待办事项哦</string>
    <string name="plans_empty">暂无计划, 快添加一个新计划吧</string>

    <string name="title_add_plan">添加计划</string>
    <string name="title_edit_plan">编辑计划</string>
    <string name="add_plan_title">标题</string>
    <string name="add_plan_description">简介(Nice To Have)</string>
    <string name="update_plan_result_success">计划更新成功</string>
    <string name="post_plan_result_success">计划发布成功</string>
    <string name="post_plan_result_title_null">为你的新计划取个好名字吧</string>
    <string name="post_plan_result_plan_exist">计划标题重复, 再想个好名字吧</string>

    <string name="title_add_record">添加事项</string>
    <string name="title_edit_record">编辑事项</string>
    <string name="add_record_title">简述</string>
    <string name="add_record_description">详情(Nice To Have)</string>
    <string name="record_date_empty">未设定</string>
    <string name="update_record_result_success">事项更新成功</string>
    <string name="post_record_result_success">事项添加成功</string>
    <string name="post_record_result_title_null">简述不可为空</string>

    <string name="title_records">事项</string>
    <string name="records_empty">暂无事项, 快添加一个新事项吧~</string>

    <string name="title_date_picker">选择时间</string>
    <string name="title_error_toast">选择的日期早于当前时间, 请重新选择</string>

    <!--Setting-->
    <string name="title_setting">关于</string>

    <string name="setting_about">关于作者</string>
    <string name="setting_about_author">-陈烧面</string>
    <string name="setting_about_email">yahaha.2019@gmail.com</string>
    <string name="setting_about_content">发份邮件反馈问题, 和作者一起完善这个作品吧~</string>
    <string name="setting_email_subject">"百分百"的意见反馈</string>

    <string name="setting_feedback">意见反馈</string>

    <string name="setting_update">检测更新</string>
    <string name="setting_update_content">今天天气很好</string>

    <!--StatusLayout-->
    <string name="str_empty">数据为空</string>
    <string name="str_net_error">你已进入没有网络的异次元</string>
    <string name="str_loading">正在加载...请耐心等待</string>
    <string name="str_btn_click">再次刷新</string>
    <string name="str_there_has_nothing">这里什么都没有</string>

    <string name="delete">删除</string>
    <string name="delete_dialog_message">确定删除该计划吗</string>
    <string name="delete_sure">确定</string>
    <string name="delete_cancel">取消</string>

    <!--<string name="setting_slogon">世上只有一种英雄主义，就是在认清生活真相之后依然热爱生活。        ——罗曼·罗兰</string>-->
    <!--<string name="setting_slogon2">手持圣旗，满面红光走向罪恶。        ——伏尔泰</string>-->
    <!--<string name="setting_slogon3">我们见到的太阳是8分钟之前的太阳，见到的月亮是1.3秒之前的月亮，见到1500米以外的建筑是5微妙之前的存在。        ——未知</string>-->
    <string name="setting_slogon4">所谓完美的文章并不存在, 就像完美的绝望不存在一样.</string>
    <!--<string name="setting_slogon5">一个男人要走过多少路，才能被称作男人。        ——鲍勃·迪伦</string>-->
    <!--<string name="setting_slogon6">时间一天天过去，好像什么都没有改变。但当你某天回首，却发现什么都不同了。        ——《生活大爆炸》</string>-->
    <!--<string name="setting_slogon7">日光之下有酒醉之人，回忆挽留爱情，片段里瞥见一生。        ——未知</string>-->
    <!--<string name="setting_slogon8">你要做一个不动声色的大人了。不准情绪化，不准偷偷想念，不准回头看。去过自己另外的生活。你要听话，不是所有的鱼都会生活在同一片海里。        ——村上春树</string>-->
    <!--<string name="setting_slogon9">我一直以为人是慢慢变老的，其实不是，人是一瞬间变老的。        ——村上春树</string>-->
    <!--<string name="setting_slogon10">有时候，一个人只要好好活着，就足以拯救某个人。        ——东野圭吾</string>-->
    <!--<string name="setting_slogon11">有些人一辈子都活在太阳的照耀下，也有些人不得不一直活在漆黑的深夜里。        ——东野圭吾</string>-->
    <!--<string name="setting_slogon12">要是什么都按照计划顺利实现，谁还用辛苦打拼。        ——东野圭吾</string>-->
    <!--<string name="setting_slogon13">当美丽、纯粹、真实的事物被破坏，我们所留恋的回忆和梦想被摧毁时，恨意便开始萌发，恣意蔓延开来。        ——东野圭吾</string>-->
    <!--<string name="setting_slogon14">看清这个世界，然后爱它。        ——罗曼·罗兰</string>-->
    <!--<string name="setting_slogon15">我不能抛弃心，我想。无论它多么沉重，有时候是多么黑暗，但他还是可以时而像鸟一样在风中曼舞。        ——村上春树</string>-->
    <!--<string name="setting_slogon">I keep my Ideals.</string>-->

    <string name="button_sure">确定</string>

    <!--Toast-->
    <string name="toast_first_add_plan">计划发布成功, 长按可删除计划</string>
    <string name="toast_first_add_record">事项发布成功, 长按可删除事项</string>
</resources>
