<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context=".plan.AddPlanActivity">

    <LinearLayout
        android:id="@+id/ll_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/color_111111"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/title_setting"
                android:textColor="@color/color_ffffff"
                android:textSize="16dp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/setting_slogon"
            android:textColor="@color/color_BDBDBD"
            android:textSize="16dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/rv_post_advice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/setting_about"
                            android:textColor="@color/color_111111"
                            android:textSize="15dp" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:src="@drawable/avatar" />

                        <LinearLayout
                            android:id="@+id/ll_goto_weibo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:gravity="center">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_marginStart="20dp"
                                app:srcCompat="@drawable/ic_weibo" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="20dp"
                                android:text="@string/setting_about_author"
                                android:textColor="@color/color_424242"
                                android:textSize="13dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_goto_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:gravity="center">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_marginStart="20dp"
                                app:srcCompat="@drawable/ic_gmail" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="20dp"
                                android:text="@string/setting_about_email"
                                android:textColor="@color/color_424242"
                                android:textSize="13dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="20dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="5dp"
                                android:text="@string/setting_about_content"
                                android:textColor="@color/color_424242"
                                android:textSize="13dp" />
                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_111111" />

                    <LinearLayout
                        android:id="@+id/ll_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:orientation="vertical"
                        android:paddingTop="15dip"
                        android:paddingBottom="15dip">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/setting_update"
                            android:textColor="@color/color_111111"
                            android:textSize="15dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/setting_update_content"
                            android:textColor="@color/color_424242"
                            android:textSize="13dp" />
                    </LinearLayout>

                    <!--<View-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="0.3dp"-->
                    <!--android:layout_marginLeft="20dp"-->
                    <!--android:layout_marginRight="20dp"-->
                    <!--android:background="@color/color_111111" />-->

                    <!--<LinearLayout-->
                    <!--android:id="@+id/rv_share_app"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:clickable="true"-->
                    <!--android:foreground="?android:attr/selectableItemBackground"-->
                    <!--android:orientation="vertical"-->
                    <!--android:paddingTop="15dip"-->
                    <!--android:paddingBottom="15dip">-->

                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginStart="20dp"-->
                    <!--android:layout_marginBottom="4dp"-->
                    <!--android:text="分享"-->
                    <!--android:textColor="@color/color_111111"-->
                    <!--android:textSize="15dp" />-->

                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginStart="20dp"-->
                    <!--android:layout_marginBottom="5dp"-->
                    <!--android:text="这么好的app,再懒也要下一个呀"-->
                    <!--android:textColor="@color/color_111111"-->
                    <!--android:textSize="13dp" />-->
                    <!--</LinearLayout>-->

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        app:backgroundTint="@color/color_000000"
        app:elevation="8dp"
        app:rippleColor="@color/color_000000"
        app:srcCompat="@drawable/ic_close" />

</LinearLayout>