<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".plan.AddPlanActivity">

    <LinearLayout
        android:id="@+id/ll_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--App Bar-->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            app:elevation="4dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:background="@color/color_ffffff"
                android:elevation="4dp"
                app:elevation="4dp"
                app:title="@string/title_add_plan"
                app:titleTextColor="@color/color_424242">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <!--<androidx.cardview.widget.CardView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="top|center"-->
        <!--android:layout_marginTop="36dp"-->
        <!--android:clickable="true"-->
        <!--android:focusable="true"-->
        <!--android:foreground="?android:attr/selectableItemBackground"-->
        <!--app:cardBackgroundColor="@color/color_111111"-->
        <!--app:cardCornerRadius="8dp"-->
        <!--app:cardElevation="4dp">-->

        <!--<TextView-->
        <!--android:id="@+id/tv_title"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="12dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginEnd="12dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:text="@string/title_add_plan"-->
        <!--android:textColor="@color/color_ffffff"-->
        <!--android:textSize="16dp" />-->
        <!--</androidx.cardview.widget.CardView>-->

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_side"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_side"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:hint="@string/add_plan_title"
                    android:maxLength="15"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:focusedByDefault="false"
                    android:gravity="start|bottom"
                    android:hint="@string/add_plan_description"
                    android:maxLength="100"
                    android:minLines="1"
                    android:textSize="16dp" />

                <!--<com.csming.percent.common.widget.AutofitRecyclerView-->
                <!--android:id="@+id/rv_color_select_list"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="140dp"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginStart="4dp"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:layout_marginBottom="8dp"-->
                <!--android:overScrollMode="never"/>-->
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fitsSystemWindows="true"
        app:backgroundTint="@color/color_212121"
        app:elevation="8dp"
        app:rippleColor="@color/color_212121"
        app:srcCompat="@drawable/ic_ok" />

</FrameLayout>